# msgtool

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.ps1  start.sh
.cursor/rules/: base.mdc
.github/workflows/: README.md  arxiv-sync.yml  data-sources-monitor.yml  rss-sync.yml
__docAI__/: AI开发指南.md
config/: sources.json  sources_schema.json
docs/: AI开发指南.md  Notion同步使用指南.md  github配置与使用说明.md  rss配置与使用说明.md  资源.md  配置说明.md
getaimsg/: SKILL.md  config.py  config.yaml
getaimsg-skill/: SKILL.md  __init__.py  config.py  config.yaml
getaimsg-skill/output/: rss_20260304_124510.md
getaimsg-skill/scripts/: fetch_arxiv.py  fetch_hackernews.py  json_to_markdown.py
getaimsg-skill/tools/: github_fetcher.py  news_scraper.py  rss_reader.py
getaimsg-skill/utils/: ai_filter.py  github_db_new.py  parser.py  skill_config.py  translator.py
getaimsg/output/: github_20260225_172711.md  hackernews_20260225_171455.md  rss_20260225_164325.md
getaimsg/scripts/: __init__.py  fetch_github.py  fetch_rss.py
getaimsg/tools/: __init__.py  arxiv_fetcher.py  news_scraper.py  rss_reader.py
mcp_server/: __init__.py  msgskill_server.py
output/github/: github_projects.json
scripts/: cleanup_all.sh  cleanup_cache.sh  cleanup_logs.sh  create_config_template.py  sync_to_notion.py
templates/: output_preview.html  wechat_topics.html
test/: check_notion_fields.py  run_all_sources.py  run_github_only.py  test_arxiv_token_estimate.py  test_database_connection.py  test_github_whitelist_optimization.py  test_notion_sync_2items.py
(+77 files in other folders)
