[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msgskill"
version = "0.1.0"
description = "MCP Server for fetching AI news from multiple sources"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "ai", "news", "scraper", "claude"]
authors = [
    { name = "Developer" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "feedparser>=6.0.0",
    "arxiv>=2.1.0",
    "pydantic>=2.0.0",
    "schedule>=1.2.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
msgskill = "msgskill.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/msgskill"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
